finished CRUD on the routes
