# go-fiber-server/docs/swagger.yaml
@@ -15,6 +15,11 @@ definitions:
       success:
         type: boolean
     type: object
+  handlers.basicResponse:
+    properties:
+      success:
+        type: boolean
+    type: object
   handlers.createTodoRequest:
     properties:
       description:
@@ -26,6 +31,18 @@ definitions:
     properties:
       id:
         type: integer
+    type: object
+  handlers.fetchOneTodoResponse:
+    properties:
+      todo:
+        $ref: '#/definitions/storage.Todo_DB'
+    type: object
+  handlers.fetchTodosResponse:
+    properties:
+      todos:
+        items:
+          $ref: '#/definitions/storage.Todo_DB'
+        type: array
     type: object
   handlers.signInRequestBody:
     properties:
@@ -60,6 +77,17 @@ definitions:
     - last_name
     - password
     type: object
+  storage.Todo_DB:
+    properties:
+      completed:
+        type: boolean
+      description:
+        type: string
+      id:
+        type: integer
+      title:
+        type: string
+    type: object
 info:
   contact: {}
   description: This is a basic example API.
@@ -67,6 +95,21 @@ info:
   version: "1.0"
 paths:
   /todos:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.fetchTodosResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Fetch all of a user's todos
+      tags:
+      - todos
     post:
       consumes:
       - application/json
@@ -87,6 +130,71 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Create a new Todo
+      tags:
+      - todos
+  /todos/:id:
+    delete:
+      consumes:
+      - application/json
+      parameters:
+      - description: Todo ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.basicResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Delete a Todo
+      tags:
+      - todos
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Todo ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.fetchOneTodoResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Fetch one of a user's todos
+      tags:
+      - todos
+  /todos/:id/complete:
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: Todo ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.basicResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Mark a todo as completed
       tags:
       - todos
   /users/me:
